_sass/main.scss
// Fonts preferences
$sans-family: Roboto, sans-serif;
$mono-family: Consolas, monospace;
$base-font-size: 16px;
$medium-font-size: $base-font-size * 0.938;
$small-font-size: $base-font-size * 0.875;
$base-line-height: 1.85;

// Font weight
// $light-weight: 300; // uncomment if necessary
$normal-weight: 400;
$bold-weight: 700;
// $black-weight: 900; // uncomment if necessary

//Light Colors
$text-base-color: #434648;
$text-link-blue: #4f9eee;
$text-link-blue-active: #0036c7;

$black: #0d122b;
$light: #ececec;
$smoke: #d2c7c7;
$gray: #6b7886;
$white: #fff;

// Dark Colors
$dark-text-base-color: #c7bebe;
$dark-text-link-blue: #ff5277;
$dark-text-link-blue-active: #ff2957;

$dark-black: #131418;
$dark-white: #eaeaea;
$dark-light: #1b1d25;
$dark-smoke: #4a4d56;
$dark-gray: #767f87;

// Width of the content area
$wide-size: 890px;
$narrow-size: 720px;

// Padding unit
$spacing-full: 30px;
$spacing-half: $spacing-full / 2;

// State of devices
$on-mobile: 768px;
$on-tablet: 769px;
$on-desktop: 1024px;
$on-widescreen: 1152px;

@mixin media-query($device) {
  @media screen and (max-width: $device) {
    @content;
  }
}

@mixin relative-font-size($ratio) {
  font-size: $base-font-size * $ratio;
}

// Import sass files
@import "klise/fonts", "klise/base", "klise/layout", "klise/post",
  "klise/miscellaneous", "klise/syntax", "klise/dark";



// publications page
.publication {
  display: block;
  content: '';
  list-style: none;
  width: 100%;
  float: left;
  padding-top: 10px;
  padding-bottom: 10px;

  .publication-vid {
    float: left;
    margin-right: 20px;
    margin-bottom: 10px;
    width: 320px;
    
    figure {
      margin: 0;
      
      figcaption {
        font-size: 0.8em;
        text-align: center;
      }
    }
  }

  .publication-vid-text {
    overflow: hidden;
    margin-bottom: 10px;
    
    p {
      margin: 0;
    }
  }
}

.publication-fig {
  float: left;
  box-sizing: border-box;
  width: 37%;
}

.publication-text {
  padding-left: 5px;
  float: left;
  box-sizing: border-box;
  width: 63%;
}

a.noarrow::after {
  content: none !important;
}

figcaption b {
  color: inherit;
}

.publication-fig img {
  max-height: 180px;
  width: auto;
  max-width: 180px;
}


@include media-query($on-mobile) {
  .publication {
    display: block;
    font-size: $small-font-size;
  }

  .publication-text {
    display: block;
    width: 100%;
    text-align: center;
  }
  .publication-fig {
    display: block;
    width: 100%;
  }
  .publication-vid {
    display: block;
    width: 100%;
  }
  .publication-vid-text {
    display: block;
    width: 100%;
  }
}

.publication > h4 {
  text-align: center;
  margin-top: 0;
}

// Consulting section
.consulting {
  margin-top: 2em;
  margin-bottom: 2em;
  padding-top: 1.2em;
  border-top: 1px solid $light;

  .consulting-heading {
    margin-bottom: 8px;
  }

  .consulting-desc {
    font-size: $small-font-size;
    color: $text-base-color;
    margin-bottom: 14px;
    line-height: 1.6;
  }

  .consulting-options {
    display: flex;
    flex-direction: column;
    gap: 0;
  }

  .consulting-option {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 6px 0;
    border-top: 1px solid $light;

    &:last-child {
      border-bottom: 1px solid $light;
    }
  }

  .consulting-option-meta {
    display: flex;
    align-items: baseline;
    gap: 10px;
  }

  .consulting-option-duration {
    font-weight: $bold-weight;
    color: $black;
    min-width: 50px;
  }

  .consulting-option-label {
    color: $text-base-color;
    font-size: $small-font-size;
  }

  .consulting-btn {
    font-size: $small-font-size;
    font-weight: $bold-weight;
    color: $text-link-blue;
    text-decoration: none;
    letter-spacing: 0.2px;
    white-space: nowrap;
    padding: 3px 0;

    &:hover {
      color: $text-link-blue-active;
    }
  }

  .consulting-note {
    font-size: $small-font-size - 1;
    color: $gray;
    margin-top: 10px;
    opacity: 0.85;
    line-height: 1.5;
  }

  @include media-query($on-mobile) {
    .consulting-option {
      flex-direction: column;
      align-items: flex-start;
      gap: 4px;
      padding: 8px 0;
    }
  }
}

// Dark mode consulting
[data-theme="dark"] {
  .consulting {
    border-top-color: $dark-light;

    .consulting-option {
      border-color: $dark-light;
      &:last-child {
        border-color: $dark-light;
      }
    }

    .consulting-btn {
      color: $dark-text-link-blue;
      &:hover {
        color: $dark-text-link-blue-active;
      }
    }
  }
}

// Language switcher styles
.language-switcher {
  display: inline-block;
  margin-left: 15px;
  vertical-align: middle;

  .lang-link {
    color: $text-base-color;
    text-decoration: none;
    font-weight: 600;
    font-size: $small-font-size;
    padding: 5px 10px;
    border: 1px solid $text-base-color;
    border-radius: 3px;
    transition: all 0.3s ease;

    &:hover {
      background-color: $text-base-color;
      color: $white;
    }
  }
}

// Dark mode language switcher
[data-theme="dark"] {
  .language-switcher {
    .lang-link {
      color: $dark-text-base-color;
      border-color: $dark-text-base-color;

      &:hover {
        background-color: $dark-text-base-color;
        color: $dark-black;
      }
    }
  }
}

// Russian language specific adjustments
html[lang="ru"] {
  body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  }

  .post-item-date {
    min-width: 115px;
  }
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.center-div {
  display: flex;
  justify-content: center;
  width: fit-content;
}

